--- a/extracting_and_cleaning_game_boxscores.ipynb
+++ b/extracting_and_cleaning_game_boxscores.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-17T02:02:51.601073100Z",
+     "start_time": "2023-10-17T02:02:46.821702700Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -138,6 +143,32 @@
     "\n",
     "pprint(game_ui_boxscore_dict['2023-02-04-22-california-baptist'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          date           opp_name wl score opp_score  fg fga fgpct 3p 3pa  \\\n0   2022-11-07      Jackson State  W    65        56  23  57  .404  8  28   \n1   2022-11-11          Texas A&M  L    58        77  20  52  .385  8  18   \n2   2022-11-15            McMurry  W   104        46  41  68  .603  5  17   \n3   2022-11-21       Wright State  L    61        77  25  58  .431  7  22   \n4   2022-11-22        Weber State  L    67        77  26  53  .491  9  17   \n..         ...                ... ..   ...       ...  ..  ..   ... ..  ..   \n31  2023-02-21      Robert Morris  L    64        83  23  47  .489  4  12   \n32  2023-02-25              IUPUI  W    93        79  34  59  .576  8  18   \n33  2023-03-02      Detroit Mercy  W    71        66  24  55  .436  5  22   \n34  2023-03-06  Northern Kentucky  L    63        75  24  53  .453  4  21   \n35  2023-03-15     Oklahoma State  L    64        69  22  62  .355  8  28   \n\n    ... opp_fta opp_ftpct opp_orb opp_trb opp_ast opp_stl opp_blk opp_tov  \\\n0   ...      14      .714       7      40       9       6       1      21   \n1   ...      35      .714      10      33       7      11       3      19   \n2   ...      15      .667       4      17       7       9       2      27   \n3   ...      19      .632       1      24      18      12       5      18   \n4   ...      25      .920       8      29      10       4       0      18   \n..  ...     ...       ...     ...     ...     ...     ...     ...     ...   \n31  ...       9      .778       4      24      14       6       7      12   \n32  ...      22      .636       8      25      15       4       4      12   \n33  ...      14      .857      13      36      11       5       3      13   \n34  ...      38      .737      16      32       6       6       2       2   \n35  ...      15      .867      15      45      13       3       6       9   \n\n   opp_pf          team_name  \n0      21  Abilene Christian  \n1      17  Abilene Christian  \n2      18  Abilene Christian  \n3      14  Abilene Christian  \n4      13  Abilene Christian  \n..    ...                ...  \n31     17   Youngstown State  \n32     18   Youngstown State  \n33     21   Youngstown State  \n34     18   Youngstown State  \n35     15   Youngstown State  \n\n[11929 rows x 38 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>opp_name</th>\n      <th>wl</th>\n      <th>score</th>\n      <th>opp_score</th>\n      <th>fg</th>\n      <th>fga</th>\n      <th>fgpct</th>\n      <th>3p</th>\n      <th>3pa</th>\n      <th>...</th>\n      <th>opp_fta</th>\n      <th>opp_ftpct</th>\n      <th>opp_orb</th>\n      <th>opp_trb</th>\n      <th>opp_ast</th>\n      <th>opp_stl</th>\n      <th>opp_blk</th>\n      <th>opp_tov</th>\n      <th>opp_pf</th>\n      <th>team_name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2022-11-07</td>\n      <td>Jackson State</td>\n      <td>W</td>\n      <td>65</td>\n      <td>56</td>\n      <td>23</td>\n      <td>57</td>\n      <td>.404</td>\n      <td>8</td>\n      <td>28</td>\n      <td>...</td>\n      <td>14</td>\n      <td>.714</td>\n      <td>7</td>\n      <td>40</td>\n      <td>9</td>\n      <td>6</td>\n      <td>1</td>\n      <td>21</td>\n      <td>21</td>\n      <td>Abilene Christian</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2022-11-11</td>\n      <td>Texas A&amp;M</td>\n      <td>L</td>\n      <td>58</td>\n      <td>77</td>\n      <td>20</td>\n      <td>52</td>\n      <td>.385</td>\n      <td>8</td>\n      <td>18</td>\n      <td>...</td>\n      <td>35</td>\n      <td>.714</td>\n      <td>10</td>\n      <td>33</td>\n      <td>7</td>\n      <td>11</td>\n      <td>3</td>\n      <td>19</td>\n      <td>17</td>\n      <td>Abilene Christian</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2022-11-15</td>\n      <td>McMurry</td>\n      <td>W</td>\n      <td>104</td>\n      <td>46</td>\n      <td>41</td>\n      <td>68</td>\n      <td>.603</td>\n      <td>5</td>\n      <td>17</td>\n      <td>...</td>\n      <td>15</td>\n      <td>.667</td>\n      <td>4</td>\n      <td>17</td>\n      <td>7</td>\n      <td>9</td>\n      <td>2</td>\n      <td>27</td>\n      <td>18</td>\n      <td>Abilene Christian</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2022-11-21</td>\n      <td>Wright State</td>\n      <td>L</td>\n      <td>61</td>\n      <td>77</td>\n      <td>25</td>\n      <td>58</td>\n      <td>.431</td>\n      <td>7</td>\n      <td>22</td>\n      <td>...</td>\n      <td>19</td>\n      <td>.632</td>\n      <td>1</td>\n      <td>24</td>\n      <td>18</td>\n      <td>12</td>\n      <td>5</td>\n      <td>18</td>\n      <td>14</td>\n      <td>Abilene Christian</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2022-11-22</td>\n      <td>Weber State</td>\n      <td>L</td>\n      <td>67</td>\n      <td>77</td>\n      <td>26</td>\n      <td>53</td>\n      <td>.491</td>\n      <td>9</td>\n      <td>17</td>\n      <td>...</td>\n      <td>25</td>\n      <td>.920</td>\n      <td>8</td>\n      <td>29</td>\n      <td>10</td>\n      <td>4</td>\n      <td>0</td>\n      <td>18</td>\n      <td>13</td>\n      <td>Abilene Christian</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>31</th>\n      <td>2023-02-21</td>\n      <td>Robert Morris</td>\n      <td>L</td>\n      <td>64</td>\n      <td>83</td>\n      <td>23</td>\n      <td>47</td>\n      <td>.489</td>\n      <td>4</td>\n      <td>12</td>\n      <td>...</td>\n      <td>9</td>\n      <td>.778</td>\n      <td>4</td>\n      <td>24</td>\n      <td>14</td>\n      <td>6</td>\n      <td>7</td>\n      <td>12</td>\n      <td>17</td>\n      <td>Youngstown State</td>\n    </tr>\n    <tr>\n      <th>32</th>\n      <td>2023-02-25</td>\n      <td>IUPUI</td>\n      <td>W</td>\n      <td>93</td>\n      <td>79</td>\n      <td>34</td>\n      <td>59</td>\n      <td>.576</td>\n      <td>8</td>\n      <td>18</td>\n      <td>...</td>\n      <td>22</td>\n      <td>.636</td>\n      <td>8</td>\n      <td>25</td>\n      <td>15</td>\n      <td>4</td>\n      <td>4</td>\n      <td>12</td>\n      <td>18</td>\n      <td>Youngstown State</td>\n    </tr>\n    <tr>\n      <th>33</th>\n      <td>2023-03-02</td>\n      <td>Detroit Mercy</td>\n      <td>W</td>\n      <td>71</td>\n      <td>66</td>\n      <td>24</td>\n      <td>55</td>\n      <td>.436</td>\n      <td>5</td>\n      <td>22</td>\n      <td>...</td>\n      <td>14</td>\n      <td>.857</td>\n      <td>13</td>\n      <td>36</td>\n      <td>11</td>\n      <td>5</td>\n      <td>3</td>\n      <td>13</td>\n      <td>21</td>\n      <td>Youngstown State</td>\n    </tr>\n    <tr>\n      <th>34</th>\n      <td>2023-03-06</td>\n      <td>Northern Kentucky</td>\n      <td>L</td>\n      <td>63</td>\n      <td>75</td>\n      <td>24</td>\n      <td>53</td>\n      <td>.453</td>\n      <td>4</td>\n      <td>21</td>\n      <td>...</td>\n      <td>38</td>\n      <td>.737</td>\n      <td>16</td>\n      <td>32</td>\n      <td>6</td>\n      <td>6</td>\n      <td>2</td>\n      <td>2</td>\n      <td>18</td>\n      <td>Youngstown State</td>\n    </tr>\n    <tr>\n      <th>35</th>\n      <td>2023-03-15</td>\n      <td>Oklahoma State</td>\n      <td>L</td>\n      <td>64</td>\n      <td>69</td>\n      <td>22</td>\n      <td>62</td>\n      <td>.355</td>\n      <td>8</td>\n      <td>28</td>\n      <td>...</td>\n      <td>15</td>\n      <td>.867</td>\n      <td>15</td>\n      <td>45</td>\n      <td>13</td>\n      <td>3</td>\n      <td>6</td>\n      <td>9</td>\n      <td>15</td>\n      <td>Youngstown State</td>\n    </tr>\n  </tbody>\n</table>\n<p>11929 rows × 38 columns</p>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_parquet(\"parquet_files/box_scores_sports_reference_2023.gzip\")\n",
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-17T02:33:27.712312500Z",
+     "start_time": "2023-10-17T02:33:27.659811Z"
+    }
+   }
   }
  ],
  "metadata": {
