--- a/Exploring_Differing_Team_Names.ipynb
+++ b/Exploring_Differing_Team_Names.ipynb
@@ -32,7 +32,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df.opp_name[~df.opp_name.str.upper().isin(constants.TEAM_NAME_ID_DICT)].map(str.upper)"
+    "df.opp_name[~df.opp_name.str.upper().isin(constants.TEAM_NAME_ID_DICT)].map(str.upper).tolist()"
    ],
    "metadata": {
     "collapsed": false
@@ -44,7 +44,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
     "max_val = max(constants.TEAM_NAME_ID_DICT.values())\n",
     "max_val +=1\n",
     "max_val"
@@ -86,18 +85,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df[df.opp_name.str.upper() == \"ST. FRANCIS (IL)\"]"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e7c74764268ee267"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
     "constants.TEAM_NAME_ID_DICT.update(update_dict)"
    ],
    "metadata": {
@@ -116,6 +103,45 @@
     "collapsed": false
    },
    "id": "c5714b35e08300be"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Finding D2 Schools\n",
+    "Find all entries in the opponent column which appear no more than 3 times AND do not appear in the `tean_name`\n",
+    "column"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a7eb73708a44d3c1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "probably_d_2_schools = set(df.opp_name.value_counts()[lambda x: x <=3].index.tolist()).difference(set(df.team_name.unique().tolist()))\n",
+    "len(probably_d_2_schools)\n",
+    "probably_d_2_schools"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b5190477566dfbaf"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "update_set = {constants.TEAM_NAME_ID_DICT.get(team) for team in df.opp_name.value_counts()[lambda x: x <=2].index.tolist()}\n",
+    "update_set"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "54587242994fbe30"
   }
  ],
  "metadata": {
